ingress/cilium/training-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-python-ingress
  namespace: python-demo
spec:
  ingressClassName: cilium
  rules:
  - host: "team1-python.devops4all.co"
    http:
      paths:
      - backend:
          service:
            name: fastapi-app-service
            port:
              number: 8000
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-jenkins-ingress
  namespace: jenkins
spec:
  ingressClassName: cilium
  rules:
  - host: "team1-jenkins.devops4all.co"
    http:
      paths:
      - backend:
          service:
            name: jenkins-service
            port:
              number: 8080
        path: /
        pathType: Prefix
